--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,15 @@ before_install:
 
 scripts:
   - docker run -e CI=true andrevargas/docker-travisci-aws-test yarn test
+
+deploy:
+  on:
+    branch: master
+  provider: elasticbeanstalk
+  app: "docker-travisci-aws-test"
+  env: "DockerTravisciAwsTest-env"
+  region: "us-east-1"
+  bucket_name: "elasticbeanstalk-us-east-1-609982889420"
+  bucket_path: "docker-travisci-aws-test"
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
